# ontoindex

./: .dockerignore  .env.example  .gitignore  .mcp.json  .ontoindexignore  .prettierignore  .prettierrc  .release-please-manifest.json  .windsurfrules  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.cli  Dockerfile.web  GUARDRAILS.md  LICENSE  MIGRATION.md  NOTICE  README.md  README.ru.md  README.zh-CN.md  RUNBOOK.md  SECURITY.md  TESTING.md  docker-compose.yaml  docker-server.mjs  docker-server.test.mjs  eslint.config.mjs  llms.txt  package-lock.json  package.json  readme_mcp.md  release-notes-v1.9.6.md  release-notes-v1.9.7.md  release-notes-v1.9.8.md
.claude-plugin/: marketplace.json
.cursor/: index.mdc
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-please-config.json
.husky/: pre-commit
docs/: README.md  contract-ledger.md
eval/: .env.example  README.md  __init__.py  constants.py  pyproject.toml  run_eval.py  tool_registry.py
ontoindex-claude-plugin/: .mcp.json
ontoindex-native/: Cargo.toml  index.cjs  native.cjs  package-lock.json  package.json
ontoindex-native/scripts/: copy-native.cjs
ontoindex-native/src/: lib.rs
ontoindex-native/src/heritage/: dag.rs  mod.rs
ontoindex-native/test/: native-csv-writer.test.cjs
ontoindex-shared/: CHANGELOG.md  package-lock.json  package.json
ontoindex-test-setup/: .gitignore
ontoindex-web/: CHANGELOG.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vercel.json  vite.config.ts  (+1 more)
(+1337 files in other folders)
