[package]
name = "ontoindex_native"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.5.2", default-features = false, features = ["napi4"] }
napi-derive = "3.4.3"
tree-sitter = "0.22"
tree-sitter-javascript = "0.21"
tree-sitter-typescript = "0.21"
